--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,38 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+
 a {
   color: #00B7FF;
+}
+
+
+a i {
+  margin-right: 0.4rem;
+}
+
+
+
+
+.sidebar {
+  background-color: #37404f;
+  width: 100%;
+  height: 1000px;
+}
+
+.groups {
+  background-color: #000;
+  margin: 20px:
+}
+
+.error404{
+  text-align: center;
+}
+
+
+.error404 h1{
+  width: 100%;
+  font-size: 30rem;
+  font-weight: bold;
+  text-shadow: 0px 10px 10px rgba(0, 0, 0, 0.66);
 }
