--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('partials/header'); %> 
+<div id="main">
+  <div class="container-fluid">
+    <div class="row">
+      <div id="sidebar" class="col-md-4">
+        <div class="sidebar">
+          <div class="groups">
+            <h1>g r o u p s</h1>
+          </div> <!-- end .groups-->
+        </div> <!-- end .sidebar -->
+      </div>  <!--  end col-md-4 -->
+      <main role="main" class="col-md-8">
+        <h1>main</h1>
+      </main>
+    </div> <!-- end .row --> 
+  </div><!-- end .container-fluid -->
+</div><!-- end #main -->
+<%- include('partials/footer'); %>
