--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,31 +1,85 @@
+/*author:starttemplate*/
+/*reference site : starttemplate.com*/
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image:url('http://demo.starttemplate.com/unique-login-form/img/background.jpg');
+  background-position:center;
+  background-size:cover;
+  
+  -webkit-font-smoothing: antialiased;
+  font: normal 14px Roboto,arial,sans-serif;
+  font-family: 'Dancing Script', cursive!important;
 }
 
 
-a {
-  color: #00B7FF;
+.container {
+  padding: 100px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #ffffff!important;
+  opacity: 1; /* Firefox */
+  font-size:18px!important;
+}
+
+.form-login {
+  background-color: rgba(0,0,0,0.55);
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  border-color:#d2d2d2;
+  border-width: 5px;
+  color:white;
+  box-shadow:0 1px 0 #cfcfcf;
+  align-content: center;
+}
+
+@media (max-width: 500px) {
+  .container{
+    marign: 0;
+  }
+}
+
+.form-control{
+  background:transparent!important;
+  color:white!important;
+  font-size: 18px!important;
 }
 
 
-a i {
-  margin-right: 0.4rem;
+h1{
+  color:white!important;
 }
 
 
-
-
-.sidebar {
-  background-color: #37404f;
-  width: 100%;
-  height: 1000px;
+h4 { 
+ border:0 solid #fff; 
+ border-bottom-width:1px;
+ padding-bottom:10px;
+ text-align: center;
 }
 
-.groups {
-  background-color: #000;
-  margin: 20px:
+
+.form-control {
+    border-radius: 10px;
 }
+
+
+.text-white{
+    color: white!important;
+}
+
+
+.wrapper {
+    text-align: center;
+}
+
+
+.footer p{
+    font-size: 18px;
+}
+
 
 .error404{
   text-align: center;
