--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -15,7 +15,7 @@
         <meta name="keywords"
             content="unique login form,leamug login form,boostrap login form,responsive login form,free css html login form,download login form">
         <meta name="author" content="leamug">
-        <title>Unique Login Form | Bootstrap Templates</title>
+        <title>Login Page</title>
         <link href="css/style.css" rel="stylesheet" id="style">
         <!-- Bootstrap core Library -->
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -25,13 +25,13 @@
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
         <!-- Font Awesome-->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
 
         <!-- Page Content -->
         <div class="container flex align-items-center text-center">
-                    <h1 class='text-white'>Unique Login Form</h1>
-                    <div class="form-login"></br>
+                    <div class="form-login mx-auto"></br>
                         <h4>Chat Anon Login</h4>
                         </br>
                         <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username"/>
