--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,15 @@
-<%- include('partials/login'); %>  
+<!DOCTYPE html>
+<html lang="en">
 
-<%- include('partials/footer'); %>
+    <title>Home Page</title>
+    <link href="stylesheets/style.css" rel="stylesheet" id="style">
+
+    <body>
+        <div class="container flex align-items-center text-center">
+            <div class="base mx-auto">
+                
+            </div>
+        </div>
+    </body>
+
+</html>
