--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lan:="en"></html>
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="stylesheets/style.css">
@@ -34,7 +34,7 @@
                     <div class="form-login mx-auto"></br>
                         <h4>Chat Anon Login</h4>
                         </br>
-                        <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username"/>
+                        <input type="text" id="userEmail" class="form-control input-sm chat-input" placeholder="email"/>
                         </br></br>
                         <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password"/>
                         </br></br>
