--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
                     <div class="form-login mx-auto"></br>
                         <h4>REGISTRATION</h4>
                         </br>
-                        <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username"/>
+                        <input type="text" id="userEmail" class="form-control input-sm chat-input" placeholder="email"/>
                         </br></br>
                         <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password"/>
                         </br></br>
