--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,17 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
-  </head>
+<%- include('partials/header'); %>
+    ​
+    <h3>Account</h3>
+    ​
+    <div id="mainAccount" class="container mx-auto">
 
-  <form action="/account" method="post" enctype="multipart/form-data">
-    <input type="text" name="displayName" placeholder="Display Name">
-    <input type="email" name="email" placeholder="Email">
-    <input type="file" name="avatar">
-      <button type="submit">Update</button>
-  </form>
+      <% if (locals.errors && locals.errors.account) { %>
+        <% locals.errors.account.forEach(function(error) { %>
+          <p class="alert alert-primary" role="alert"><%= error %></p>
+        <% }) %>
+      <% } %>
+      
 
+      <div  class="container mx-auto"> 
+
+        <form action="/account" method="post" enctype="multipart/form-data">
+          
+          <div class="card-body">
+            <h6 class="heading-small text-muted mb-4">User information</h6>
+            <div class="pl-lg-4">
+            <div class="row">
+            <div class="col-lg-6">
+            <div class="form-group focused">
+              <label class="form-control-label" for="input-displayname">Display name</label>
+              <input type="text" name="displayName" placeholder="Display Name">
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="form-group">
+              <label class="form-control-label" for="input-email">Email address</label>
+              <input type="email" name="email" placeholder="Email">
+            </div>
+          </div>     
+          
+          <input type="file" name="avatar">
+          <br><br>
+          <button type="submit">Update</button>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+    ​</div>
+  </body>
 </html>
+​
