--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,7 +33,7 @@
         <div class="container flex align-items-center text-center">
                     <div class="form-register mx-auto"></br>
                         <div class="title">
-                            <h4>REGISTRATION</h4>
+                            <h4>Chat Anon Registration</h4>
                         </div>
                         
                         </br>
@@ -50,13 +50,13 @@
                             <br><br><br>
                             <input type="password" name="passwordConfirm" placeholder="Confirm Password">
                             <br><br><br>
-                            <input type="submit" id="button" value="register">
+                            <input type="submit" class="btn btn-info btn-md" value="register">
                         </form>
 
                         <br>
                         
                         <div>
-                            <a href="localhost:3000/login" rel="dofollow">login here</a>
+                            <a href="/login" class="text-info">login here</a>
                         </div>
                     </div>
                 </br></br></br>
