--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,22 @@
 <%- include('partials/header'); %>
 
 <nav class="navbar fixed-top navbar-dark" style="background-color: black;">
-   <video src="images/logo.mp4"></video>                 
+   <img src="images/logo.png" alt="logo" width="100" height="100">      
 </nav>
 
-<div class="container">
-            
-</div>
+<div class="row">
+   <div class="col-md-2 offset-sm-2" id="sidebar">
+      <div class="title">
+         <h4>Channels</h4>
+      </div>
+   </div>
 
+   <div class="divider">
+
+   </div>
+
+   <div class="col-md-6" id="main">
+               
+   </div>
+</div>
 <%- include('partials/footer'); %>
