--- a/views/account.ejs
+++ b/views/account.ejs
@@ -29,7 +29,7 @@
           <div class="col-lg-6">
             <div class="form-group">
               <label class="form-control-label" for="input-email">Email address</label>
-              <input type="email" name="email" placeholder="Email">
+              <input type="email" name="email" placeholder="Email" value="<%= locals.user.email %>">
             </div>
           </div>     
           
