--- a/views/register.ejs
+++ b/views/register.ejs
@@ -56,7 +56,7 @@
                         <br>
                         
                         <div>
-                            <a href="/login" class="text-info">login here</a>
+                            <a href="/" class="text-info">login here</a>
                         </div>
                     </div>
                 </br></br></br>
