--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,45 +1,109 @@
 <%- include('partials/header'); %>
     ​
-    <h3>Account</h3>
-    ​
-    <div id="mainAccount" class="container mx-auto">
-
+    <nav class="navbar fixed-top navbar-dark" style="background-color: black;">
+      <img src="images/logo.png" alt="logo" width="100" height="100">      
+   </nav>
+       ​
       <% if (locals.errors && locals.errors.account) { %>
         <% locals.errors.account.forEach(function(error) { %>
           <p class="alert alert-primary" role="alert"><%= error %></p>
         <% }) %>
       <% } %>
       
-
-      <div  class="container mx-auto"> 
-
-        <form action="/account" method="post" enctype="multipart/form-data">
-          
-          <div class="card-body">
-            <h6 class="heading-small text-muted mb-4">User information</h6>
-            <div class="pl-lg-4">
-            <div class="row">
-            <div class="col-lg-6">
-            <div class="form-group focused">
-              <label class="form-control-label" for="input-displayname">Display name</label>
-              <input type="text" name="displayName" placeholder="Display Name">
-            </div>
+      <div class="row">
+        
+        <div class="col-md-2 offset-sm-2" id="sidebar">
+          <div class="title">
+             <h4>Channels</h4>
           </div>
+       </div>
+    
+       <div class="divider">
+    
+       </div>
 
-          <div class="col-lg-6">
-            <div class="form-group">
-              <label class="form-control-label" for="input-email">Email address</label>
-              <input type="email" name="email" placeholder="Email" value="<%= locals.user.email %>">
+        <div class="col-md-6" id="main">
+          <form action="/account" method="post" enctype="multipart/form-data">
+            
+            <div class="title">
+              <h3>Profile</h3>
             </div>
-          </div>     
-          
-          <input type="file" name="avatar">
-          <br><br>
-          <button type="submit">Update</button>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-    ​</div>
+
+            <br><br>
+
+            <div class="col-lg-6">
+              <div class="form-group focused">
+                <label class="form-control-label" for="input-displayname">Display name</label>
+                <div>
+                  <input type="text" name="displayName" value="<%= locals.user.displayName %>">"
+                </div>
+              </div>
+            </div>
+  
+            <br>
+
+            <div class="col-lg-6">
+              <div class="form-group">
+                <label class="form-control-label" for="input-email">Email address</label>
+                <div>
+                  <input type="email" name="email"  value="<%= locals.user.email %>">
+                </div>
+              </div>
+            </div>     
+
+            <br>
+
+            <div class="col-lg-6">
+              <div class="form-group">
+                <label class="title" for="avatar" id="avatarLabel">Update Avatar</label>
+                <br>
+              <input type="file" name="avatar" id="profilepicture" onChange="loadFile(event)">
+              <br>
+              <img class="avatar" src="<%= user.photoURL %>" alt="Avatar" id="output">
+              
+              </div>
+            </div>
+            
+            <br><br><br>
+            
+            <div class="col-lg-6">
+              <button type="submit" id="update">Update</button>
+            </div>
+          </form> 
+
+          <br>
+
+          <form action="/password" method="post">
+                         
+            <div class="col-lg-6">
+              <label class="form-control-label" for="input-password">Change password</label>
+              <div>
+                <input type="password" name="password" value="<%= locals.user.password %>">
+              </div>
+            </div> 
+
+            <br>
+
+            <div class="col-lg-6">
+              <label class="form-control-label" for="input-password">Change password</label>
+              <div>
+                <input type="password" name="passwordConfirm" placeholder="Confirm Password">
+              </div>
+            </div> 
+
+            <br><br><br>
+              
+            <div class="col-lg-6">
+              <button type="submit" id="update">Update Password</button>
+            </div>
+                   
+          </form>
+
+          <br>        
+
+        </div>
+     </div>
+     
   </body>
 </html>
 ​
