--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -171,19 +171,20 @@ width: 1000px;
 
 #profilepicture{
   color: white  ;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  vertical-align: middle;
+  width: 250px;
+  height: 350px;
+  border-radius: 50%;
+  object-fit: cover;
+}
 }
 
 #avatar {
   display: none;
 }
 
-#output {
-  vertical-align: middle;
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  object-fit: cover;
-}
 
 
 /*home*/
