--- a/views/account.ejs
+++ b/views/account.ejs
@@ -18,9 +18,7 @@
           </div>
        </div>
     
-       <div class="divider">
-    
-       </div>
+       <div class="divider"> </div>
 
         <div class="col-md-6" id="main">
           <form action="/account" method="post" enctype="multipart/form-data">
