--- a/views/channels.ejs
+++ b/views/channels.ejs
@@ -12,51 +12,56 @@
 		<div class="col-md-2 offset-sm-2" id="sidebar">
 			
 
-			<% 
-		var channels = locals.channels
-		var owned = ("owned" in  channels) ? channels.owned : false
-		var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
-		%>
-		
-		<div id="owned-channels" class="user-channels">
-			<div class="title">
-				<h4>Channels</h4>
+				<% 
+			var channels = locals.channels
+			var owned = ("owned" in  channels) ? channels.owned : false
+			var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
+			%>
+			
+			<div id="owned-channels" class="user-channels">
+				<div class="title">
+					<h4>Channels</h4>
+				</div>
+				<% if (owned) { %>
+					<ul>
+					<% owned.forEach(function(channel) { %>
+						<li>
+							<img src="<%= channel.image %>" alt="<%= channel.name %>">
+							<a href="/channel/<%= channel.id %>/"><%= channel.name %></a>
+							<a href="/channels/delete/<%= channel.id %>/"><i class="fa fa-trash" aria-hidden="true"></i></a>
+						</li>
+					<% }) %>
+					</ul>
+				<% }  %>
 			</div>
-			<% if (owned) { %>
-				<ul>
-				<% owned.forEach(function(channel) { %>
-					<li>
-						<img src="<%= channel.image %>" alt="<%= channel.name %>">
-						<a href="/channel/<%= channel.id %>/"><%= channel.name %></a>
-						<a href="/channels/delete/<%= channel.id %>/"><i class="fa fa-trash" aria-hidden="true"></i></a>
-					</li>
-				<% }) %>
-				</ul>
-			<% }  %>
-		</div>
-		<div id="subscribed-channels" >
-			<h4>Subscribed Channels</h4>
-			<% if (subscribed) { %>
-				<ul>
-				<% subscribed.forEach(function(channel) { %>
-					<li>
-						<img src="<%= channel.image %>" alt="<%= channel.name %>">
-						<a href="/channel/<%= channel.slug %>/"><%= channel.name %></a>
-					</li>
-				<% }) %>
-				</ul>
-			<% }  %>
-		</div>
+			<div id="subscribed-channels" >
+				<h4>Subscribed Channels</h4>
+				<% if (subscribed) { %>
+					<ul>
+					<% subscribed.forEach(function(channel) { %>
+						<li>
+							<img src="<%= channel.image %>" alt="<%= channel.name %>">
+							<a href="/channel/<%= channel.slug %>/"><%= channel.name %></a>
+						</li>
+					<% }) %>
+					</ul>
+				<% }  %>
+			</div>
 		</div>
 		
 		
 
-		<div class="divider">
+		<div class="divider"></div>
     
 	
 
-		<div class="col-md-6" id="mainChannels">
+		<div class="col-md-6 bg-black" id="mainChannels">
 			<form id="channel-create-form" action="/channels/add" method="post" enctype="multipart/form-data">
+
+				<div class="title">
+					<h3>Create Channel</h3>
+				  </div>
+
 				<input type="text" class="form-control" name="name" placeholder="Display Name" value="">
 				<input type="file" class="custom-file-input" name="avatar" id="avatar-upload">
 				<% if (users) { %>
@@ -71,6 +76,5 @@
 	</div>
    
      
-  </body>
-</html>
+<%- include('partials/footer'); %>
 ​
