--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -21,7 +23,9 @@
         <!-- Font Awesome-->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    
     </head>
+
     <body>
 
         <!-- Page Content -->
@@ -38,6 +42,11 @@
                     <br></br><br>
                     <input type="password" name="password" placeholder="Password">
                     <br></br><br>
+                    <% if (locals.errors && locals.errors.login) { %>
+                        <% locals.errors.login.forEach(function(error) { %>
+                            <p class="alert alert-primary" role="alert"><%= error %></p>
+                        <% }) %>
+                    <% } %>
                     <input type="submit" class="btn btn-info btn-md" value="login">
                 </form>
                 <br></br>
