--- a/views/channels.ejs
+++ b/views/channels.ejs
@@ -1,23 +1,17 @@
-<% var users = locals.channels.users %>
-
-	  
+<% 
+var users = locals.channels.users 
+var channels = locals.channels;
+var owned = (channels && "owned" in  channels) ? channels.owned : false
+var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
+%>
 <%- include('partials/header'); %>
 <%- include('partials/navbar'); %>
-
-
+       
    <div class="row">   
 		<div class="col-md-2 offset-sm-2" id="sidebar">
 			
-			<% 
-			var channels = locals.channels;
-			var owned = (channels && "owned" in  channels) ? channels.owned : false
-			var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
-			%>
-			
 			<div id="owned-channels" class="user-channels">
-				<div class="title">
-					<h4>Channels</h4>
-				</div>
+				<div class="title"><h4>Channels</h4></div>
 				<% if (owned) { %>
 					<ul>
 					<% owned.forEach(function(channel) { %>
@@ -30,6 +24,7 @@
 					</ul>
 				<% }  %>
 			</div>
+
 			<div id="subscribed-channels" >
 				<h4>Subscribed Channels</h4>
 				<% if (subscribed) { %>
@@ -37,7 +32,7 @@
 					<% subscribed.forEach(function(channel) { %>
 						<li>
 							<img src="<%= channel.image %>" alt="<%= channel.name %>">
-							<a href="/channel/<%= channel.slug %>/"><%= channel.name %></a>
+							<a href="/channel/<%= channel.id %>/"><%= channel.name %></a>
 						</li>
 					<% }) %>
 					</ul>
@@ -45,37 +40,49 @@
 			</div>
 		</div>
 		
-		
-
 		<div class="divider"></div>
     
-	
-
 		<div class="col-md-6 bg-black" id="mainChannels">
 			<form id="channel-create-form" action="/channels/add" method="post" enctype="multipart/form-data">
 
-				<div class="title">
-					<h3>Create Channel</h3>
-				  </div>
+				<div class="title"><h3>Create Channel</h3></div>
 
-				<input type="text" class="form-control" name="name" placeholder="Display Name" value="">
-				<input type="file" class="custom-file-input" name="avatar" id="avatar-upload">
-				<% if (users) { %>
-					<% users.forEach(function(user) { %>
-						<input class="user-check-input" id="user<%= user.id %>" type="checkbox" name="users" value="<%= user.id %>">
-						<p><%= user.name %></p>
-					<% }) %>
-				<% } %>
-				<% if (locals.errors && locals.errors.channels) { %>
-					<% locals.errors.channels.forEach(function(error) { %>
+				<% if (locals.errors && locals.errors.channels && locals.errors.channels.general) { %>
+					<% locals.errors.channels.general.forEach(function(error) { %>
 						<p class="alert alert-primary" role="alert"><%= error %></p>
 					<% }) %>
 				<% } %>
-				<button id="update" type="submit">Create</button>
+
+				<div class="form-group">
+					<label class="control-label">Display Name</label>
+					<input id="update-display-name" type="text" class="form-control" name="name" placeholder="Display Name" value="">
+				</div>
+
+				<input type="file" class="custom-file-input" name="avatar" id="avatar-upload">
+				<% if (users) { %>
+					<% users.forEach(function(user) { %>
+						<div class="form-check">
+							<input type="checkbox" class="form-check-input" id="user<%= user.id %>" type="checkbox" name="users" value="<%= user.id %>">
+							<label class="form-check-label" for="exampleCheck1"><%= user.name %></label>
+						</div>
+					<% }) %>
+				<% } %>
+
+				<div class="form-group">
+					<label class="control-label">Add an Image</label>
+					<div class="input-group-append">
+					  <div class="custom-file">
+						<input type="file" class="custom-file-input" name="avatar" id="avatar-upload">
+						<label class="custom-file-label" for="avatar-upload">Choose file</label>
+					  </div>
+					</div>
+				</div>
+
+				<button type="submit" class="btn btn-primary">Create</button>
+
 			</form>
 		</div>
 	</div>
    
-     
 <%- include('partials/footer'); %>
 ​
