--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-dark" style="background-color: black;">
-    <img src="images/logo.png" alt="logo" width="100" height="100">   
+    <img src="/images/logo.png" alt="logo" width="100" height="100">   
     <div>
       <a href="/" class="title p-4 my-lg-0">logout</a>
     </div>   
