--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,9 +10,7 @@
         <!-- Font Awesome-->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="stylesheets/style.css">
-        
-    
+        <link rel="stylesheet" href="/stylesheets/style.css">
 	<body>
 	
 		
