--- a/views/channels.ejs
+++ b/views/channels.ejs
@@ -16,9 +16,8 @@ var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
 					<ul>
 					<% owned.forEach(function(channel) { %>
 						<li>
-							<img src="<%= channel.image %>" alt="<%= channel.name %>">
-							<a href="/channel/<%= channel.id %>/"><%= channel.name %></a>
-							<a href="/channels/delete/<%= channel.id %>/"><i class="fa fa-trash" aria-hidden="true"></i></a>
+							<img src="<%= channel.image %>" class="channelimg" alt="<%= channel.name %>">
+				 			<a href="/channel/<%= channel.id %>/" class="channelname"><%= channel.name %></a>
 						</li>
 					<% }) %>
 					</ul>
@@ -26,18 +25,22 @@ var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
 			</div>
 
 			<div id="subscribed-channels" >
-				<h4>Subscribed Channels</h4>
 				<% if (subscribed) { %>
 					<ul>
 					<% subscribed.forEach(function(channel) { %>
 						<li>
-							<img src="<%= channel.image %>" alt="<%= channel.name %>">
-							<a href="/channel/<%= channel.id %>/"><%= channel.name %></a>
+							<img src="<%= channel.image %>" class="channelimg" alt="<%= channel.name %>">
+                  			<a href="/channel/<%= channel.id %>/" class="channelname"><%= channel.name %></a>
 						</li>
 					<% }) %>
 					</ul>
 				<% }  %>
 			</div>
+
+			<div class="direction">
+				<a href="/channels" class="title" id="create">Create Channel</a>
+			</div>
+
 		</div>
 		
 		<div class="divider"></div>
@@ -54,7 +57,7 @@ var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
 				<% } %>
 
 				<div class="form-group">
-					<label class="control-label">Display Name</label>
+					<label class="title">Display Name</label>
 					<input id="update-display-name" type="text" class="form-control" name="name" placeholder="Display Name" value="">
 				</div>
 
