--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,18 @@
 <nav class="navbar fixed-top navbar-dark" style="background-color: black;">
     <img src="/images/logo.png" alt="logo" width="100" height="100">   
-    <div>
-      <a href="/" class="title p-4 my-lg-0">logout</a>
-    </div>   
+    
+    <div class="navitems">
+      <div>
+        <a href="/account">
+          <img class="avatar" src="<%= user.photoURL %>" alt="Avatar">
+        </a> 
+      </div>
+
+      <div>
+        <a href="/" class="title p-4 my-lg-0" id="logout">logout</a>
+      </div>   
+    </div>
+
+    
 </nav>
      ​
