--- a/views/account.ejs
+++ b/views/account.ejs
@@ -45,6 +45,11 @@ var subscribed = ("subscribed" in  channels) ? channels.subscribed : false
             <% }  %>
           </div>
 
+          
+		  	<div class="direction">
+			  	<a href="/channels" class="title" id="create">Create Channel</a>
+			  </div>
+
       </div>
 
       <div class="divider"></div>
