--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -274,6 +274,12 @@ pre{
   font-family: 'Press Start 2P', cursive;
 }
 
+.form-check{
+  color: white;
+  padding-top: 5px;
+}
+
+
 /* navbar */
 
 .navitems{
