--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,13 +47,13 @@
                         <% } %>
 
                         <form action="/register" method="post">
-                            <input type="email" name="email" placeholder="Email">
+                            <input type="email" name="email" placeholder="Email" required>
                             <br><br><br>
                             <input type="password" name="password" placeholder="Password">
                             <br><br><br>
-                            <input type="password" name="passwordConfirm" placeholder="Confirm Password">
+                            <input type="password" name="passwordConfirm" placeholder="Confirm Password" required>
                             <br><br><br>
-                            <input type="submit" class="btn btn-info btn-md" value="register">
+                            <input type="submit" class="btn btn-info btn-md" value="register" required>
                         </form>
 
                         <br>
